Update index.html ext link to style.css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PMIIDev - Spinner</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Uji coba button Spinner</h1><br>
     <button class="btn">
         <span class="spinner"></span>
-        <span class="btn__text">sabar bos...</span>
+        <span class="btn__text">Dev Loading...</span>
     </button>
 </body>
 </html>
