--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Uji coba button Spinner</h1><br>
     <button class="btn">
         <span class="spinner"></span>
-        <span class="btn__text">Dev Loading...</span>
+        <span class="btn__text">Loading...</span>
     </button>
 </body>
 </html>
