Update style: spinner and keyframes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <button class="btn">
         <span class="spinner"></span>
-        <span class="btn__text">Loading...</span>
+        <span class="btn__text">loading...</span>
     </button>
 </body>
 </html>
